# ssimulacra2

./: .gitignore  .gitmodules  CONVERSION_SUMMARY.md  README.md  build_shared_library.bat  build_shared_library.sh  build_ssimulacra  setup_dependencies.bat  setup_dependencies.sh  setup_vcpkg.bat
.github/workflows/: build.yml
examples/csharp/: Program.cs  README.md  Ssimulacra2.cs  Ssimulacra2Example.csproj
lcms2_files/: CMakeLists.txt
src/: CMakeLists.txt  ssimulacra2.cc  ssimulacra2_c_api.cc  ssimulacra2_c_api.h
